Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33155

Qt Creator 17 Prevents custom kit Enabling due to "mkspec Not Found" error.

XMLWordPrintable

    • Linux/X11
    • 780599236 (17.0)

      When enabling a custom kit in Qt Creator 17.0.0 for a custom Linux environment, an error "mkspec not found for Qt version" appears, preventing the kit from being enabled. This did not occur in earlier versions.

      The issue can be bypassed by temporarily removing by the mkspec directory in the kit, enabling the kit for that project, and then adding the mkpsec directory back into the kit.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            mahdi.belila Mehdi Belila
            Votes:
            3 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes