QtSupport: Let users provide an absolute mkspec path

... in the kit aspect.

Fixes: QTCREATORBUG-33155
Change-Id: Id984ddbcb227081c63a597d79c3c2d57fdc73720
Reviewed-by: hjk <hjk@qt.io>